# gridworld_209as

./: gridworld.ipynb  main.py  patrick_gridsim.py  pyproject.toml
src/gridworld/: __init__.py  gridworld.py
tests/: test_gridworld.py
