[project]
name = "gridworld"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "numpy>=2.3.3",
    "ruff>=0.13.2",
]

[build-system]
    requires = ["uv_build>=0.8.8,<0.9.0"]
    build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
